syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.zache";
option java_outer_classname = "MoreRpcProto";

package moreRpc;

// The greeter service definition.
service MoreRpcProto {
    // 获取单个value
    rpc InGetKey(Data) returns(Data){}
      // 设置key/value
    rpc InSetValue(Data) returns(Data){}

    // 提交事务
    rpc Commit(CommitIDMsg) returns(CommitIDMsg){}
    // 丢弃事务
    rpc Drop(CommitIDMsg) returns(CommitIDMsg){}

}

message Data {
    string key = 1;
    string value = 2;
}

message CommitIDMsg{
    string CommitID = 3;
}